# Flask

./: crud.py  lesson18.py  lesson19.py  models.py  pyproject.toml  test.db
static/: main.css
templates/: create_note_form.html  home_page.html  note.html  note_view.html
